fix: fix size of component in 404 on mobile

--- a/src/pages/404/NotFoundPage.module.css
+++ b/src/pages/404/NotFoundPage.module.css
@@ -1,6 +1,6 @@
 .notFound {
   width: 100%;
-  padding: 36px 0 40px 0;
+  padding: 36px 16px 40px 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
 
 .notFound__image {
   aspect-ratio: 1/1;
-  width: 39.55%;
+  width: 43.06%;
 }
 
 .notFound__main {
@@ -56,7 +56,8 @@
 }
 
 .button {
-  width: 92.2%;
+  width: 100%;
+  padding: 14px 18px;
 }
 
 @media (min-width: 768px) {
